@@ -33,9 +33,9 @@ struct q_score {			/* Quest "scorecard" */
 };
 
 #define MAX_QUEST_TRIES  7	/* exceed this and you "fail" */
-#define MIN_QUEST_ALIGN 20	/* at least this align.record to start */
-  /* note: align 20 matches "pious" as reported by enlightenment (cmd.c) */
+#define MIN_QUEST_ALIGN  3	/* at least this align.record to start */
+  /* note: align 3 matches "aligned" as reported by enlightenment (cmd.c) */
 #define MIN_QUEST_LEVEL 10	/* at least this u.ulevel to start */
-  /* note: exp.lev. 14 is threshold level for 5th rank (class title, role.c) */
+  /* note: exp.lev. 10 is threshold level for 4th rank (class title, role.c) */
 
 #endif /* QUEST_H */
